# pkglink

./: .editorconfig  .gitignore  README.md  example_demo.py  mise.toml  pkglink.config.yaml  pyproject.toml  toolbelt.yaml
.github/workflows/: ci-checks.yml
configs/: tasks.toml
local-integration/: README.md  pyproject.toml
local-integration-diff/: README.md  pyproject.toml
local-integration/local_integration/: main.py
pkglink/: batch_config.py  config.py  execution_plan.py  installation.py  logging.py  main.py  mise_config.py  models.py  package_discovery.py  parsing.py  pkglinkx.py  symlinks.py  uvx.py
pkglink/cli/: common.py  main.py  pkglink.py  pkglink_batch.py  pkglinkx.py  plk.py
pkglink/cli/subparsers/: __init__.py  _shared.py  link.py  plan.py  sync.py  tool.py
tests/: test_batch_config.py  test_config.py  test_hello_world.py  test_installation.py  test_integration.py  test_logging.py  test_main.py  test_mise_config.py  test_parsing.py  test_relink.py  test_setup.py  test_symlinks.py
tests/integration/: conftest.py  test_argparse.py  test_batch_cli.py  test_local_integration_diff.py  test_pkglink.py  test_pkglinkx.py
