[project]
name = "pkglink"
description = "Create symlinks to python package directories"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
pkglink = "pkglink.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "pytest-cov>=4.0.0"]

[tool.hatch]
build.packages = ["pkglink"]
metadata.allow-direct-references = true
version.path = 'pkglink/version.py'

[tool]
poe.include = ["configs/tasks.toml"]
pyright.typeCheckingMode = "standard"
ruff.extend = "configs/ruff.toml"
ruff.exclude = [
  "tests/**/fixtures/**", # Exclude test fixture resources from linting
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"